--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -151,6 +151,9 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment.5" = "%1$@, %2$@, %3$@, dan lainnya berbagi momen baru";
 
+/* New moment screenshot notification text to be shown to the user. */
+"notification.moment.screenshot" = "%@ mengambil jepretan layar momen Anda";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
